fixed horizontal scroll bars due to animations.

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,9 @@ table {
 html {
   font-size: 62.5%;
 }
+body {
+  overflow-x: hidden;
+}
 html,
 body {
   font-family: Roboto, Arial, sans-serif;
