--- a/less/global.less
+++ b/less/global.less
@@ -14,8 +14,13 @@ html {
     font-size: 62.5%;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 html, body {
     font-family: @font-style;
+   
 }
 
 .home, .services {
